tests/compiletests/ui/spirv-attr/entry/entry2_global_asm.stderr

thread 'rustc' panicked at crates/rustc_codegen_spirv/src/builder/spirv_asm.rs:795:39:
tried to lookup ID that wasn't a type, or has no definition
stack backtrace:
   0:     0x7fc10eab9a13 - <std::sys::backtrace::BacktraceLock::print::DisplayBacktrace as core::fmt::Display>::fmt::hc465d815da68b65f
   1:     0x7fc10f202bbf - core::fmt::write::h6e2eb076f9a0f58d
   2:     0x7fc10eaaf543 - std::io::Write::write_fmt::h4034a2ae1c7826d5
   3:     0x7fc10eab9872 - std::sys::backtrace::BacktraceLock::print::h2babb832b0f7487c
   4:     0x7fc10eabd36a - std::panicking::default_hook::{{closure}}::hd2c14db44ce2b2ee
   5:     0x7fc10eabceef - std::panicking::default_hook::h6e7d36bb999fce51
   6:     0x7fc10db847e3 - std[47a95048f41649f2]::panicking::update_hook::<alloc[a82d94b8c3b79735]::boxed::Box<rustc_driver_impl[5ab17e6b36e59dd4]::install_ice_hook::{closure#1}>>::{closure#0}
   7:     0x7fc10db847e3 - std[47a95048f41649f2]::panicking::update_hook::<alloc[a82d94b8c3b79735]::boxed::Box<rustc_driver_impl[5ab17e6b36e59dd4]::install_ice_hook::{closure#1}>>::{closure#0}
   8:     0x7fc10eabdbbb - std::panicking::rust_panic_with_hook::h25a3025a927f112d
   9:     0x7fc10eabd8ba - std::panicking::begin_panic_handler::{{closure}}::h21266e60c12bf697
  10:     0x7fc10eab9ee9 - std::sys::backtrace::__rust_end_short_backtrace::hef199fe2823162f9
  11:     0x7fc10eabd59d - __rustc[a3a962cb80ef9725]::rust_begin_unwind
  12:     0x7fc10b2a4570 - core::panicking::panic_fmt::hb5cc6ca3635c7279
  13:     0x7fc10c60c5fb - core::option::expect_failed::h1d79806550377b1e
  14:     0x7fc0fc8c5290 - rustc_codegen_spirv::spirv_type::TypeCache::lookup::h47122cf8bf4c5836
  15:     0x7fc0fc9d50a5 - rustc_codegen_spirv::builder::spirv_asm::<impl rustc_codegen_spirv::builder::Builder>::infer_result_type::subst_ty_pat::h638b8957db6f6e36
  16:     0x7fc0fc9d5004 - rustc_codegen_spirv::builder::spirv_asm::<impl rustc_codegen_spirv::builder::Builder>::infer_result_type::subst_ty_pat::h638b8957db6f6e36
  17:     0x7fc0fcae1173 - rustc_codegen_spirv::builder::spirv_asm::<impl rustc_codegen_spirv::builder::Builder>::infer_result_type::ha7bd102168087675
  18:     0x7fc0fc8c7ec7 - rustc_codegen_spirv::builder::spirv_asm::<impl rustc_codegen_spirv::builder::Builder>::codegen_asm::hc82cd42bd564ed10
  19:     0x7fc0fcadf27a - rustc_codegen_spirv::builder::spirv_asm::<impl rustc_codegen_spirv::maybe_pqp_cg_ssa::traits::asm::AsmBuilderMethods for rustc_codegen_spirv::builder::Builder>::codegen_inline_asm::hb6932d0263333b48
  20:     0x7fc0fc9e3743 - rustc_codegen_spirv::maybe_pqp_cg_ssa::mir::block::TerminatorCodegenHelper::do_inlineasm::h8667870a3976b10b
  21:     0x7fc0fcb9648f - rustc_codegen_spirv::maybe_pqp_cg_ssa::mir::block::<impl rustc_codegen_spirv::maybe_pqp_cg_ssa::mir::FunctionCx<Bx>>::codegen_terminator::h12726ee9ca96a81b
  22:     0x7fc0fcbada3d - rustc_codegen_spirv::maybe_pqp_cg_ssa::mir::codegen_mir::h2b052187890bd809
  23:     0x7fc0fcbe1351 - rustc_codegen_spirv::maybe_pqp_cg_ssa::base::codegen_instance::h3a4dd8e072c62c01
  24:     0x7fc0fc956be0 - <rustc_middle::mir::mono::MonoItem as rustc_codegen_spirv::maybe_pqp_cg_ssa::mono_item::MonoItemExt>::define::h881b639d0e61ed4b
  25:     0x7fc0fcc2327b - <rustc_codegen_spirv::SpirvCodegenBackend as rustc_codegen_spirv::maybe_pqp_cg_ssa::traits::backend::ExtraBackendMethods>::compile_codegen_unit::{{closure}}::h024a7930442050fe
  26:     0x7fc0fcc22a0d - <rustc_codegen_spirv::SpirvCodegenBackend as rustc_codegen_spirv::maybe_pqp_cg_ssa::traits::backend::ExtraBackendMethods>::compile_codegen_unit::hbf64a051e4ea9d67
  27:     0x7fc0fcbe2fe5 - rustc_codegen_spirv::maybe_pqp_cg_ssa::base::codegen_crate::h3b134c30747dfcef
  28:     0x7fc0fcc21a7f - <rustc_codegen_spirv::SpirvCodegenBackend as rustc_codegen_spirv::maybe_pqp_cg_ssa::traits::backend::CodegenBackend>::codegen_crate::h15bc966439211610
  29:     0x7fc11045c98c - <rustc_interface[9a4f103755b13c1e]::queries::Linker>::codegen_and_build_linker
  30:     0x7fc11045a487 - rustc_interface[9a4f103755b13c1e]::passes::create_and_enter_global_ctxt::<core[28534e9693d03804]::option::Option<rustc_interface[9a4f103755b13c1e]::queries::Linker>, rustc_driver_impl[5ab17e6b36e59dd4]::run_compiler::{closure#0}::{closure#2}>::{closure#2}::{closure#0}
  31:     0x7fc1104240ef - rustc_interface[9a4f103755b13c1e]::interface::run_compiler::<(), rustc_driver_impl[5ab17e6b36e59dd4]::run_compiler::{closure#0}>::{closure#1}
  32:     0x7fc1103e0638 - std[47a95048f41649f2]::sys::backtrace::__rust_begin_short_backtrace::<rustc_interface[9a4f103755b13c1e]::util::run_in_thread_with_globals<rustc_interface[9a4f103755b13c1e]::util::run_in_thread_pool_with_globals<rustc_interface[9a4f103755b13c1e]::interface::run_compiler<(), rustc_driver_impl[5ab17e6b36e59dd4]::run_compiler::{closure#0}>::{closure#1}, ()>::{closure#0}, ()>::{closure#0}::{closure#0}, ()>
  33:     0x7fc1103e0316 - <<std[47a95048f41649f2]::thread::Builder>::spawn_unchecked_<rustc_interface[9a4f103755b13c1e]::util::run_in_thread_with_globals<rustc_interface[9a4f103755b13c1e]::util::run_in_thread_pool_with_globals<rustc_interface[9a4f103755b13c1e]::interface::run_compiler<(), rustc_driver_impl[5ab17e6b36e59dd4]::run_compiler::{closure#0}>::{closure#1}, ()>::{closure#0}, ()>::{closure#0}::{closure#0}, ()>::{closure#1} as core[28534e9693d03804]::ops::function::FnOnce<()>>::call_once::{shim:vtable#0}
  34:     0x7fc1103de93d - std::sys::pal::unix::thread::Thread::new::thread_start::hf0d6fc1bcf013f18
  35:     0x7fc109c978ee - start_thread
  36:     0x7fc109d1b9bc - __GI___clone3
  37:                0x0 - <unknown>

error: the compiler unexpectedly panicked. this is a bug.

note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md

note: please make sure that you have updated to the latest nightly

note: please attach the file at `$SRC_DIR/rustc-ice-2026-01-19T17_56_06-137971.txt` to your bug report

note: compiler flags: -C prefer-dynamic -Z codegen-backend=/home/firestar99/workspace/rust-gpu/target/release/deps/librustc_codegen_spirv.so -Z binary-dep-depinfo -C symbol-mangling-version=v0 -Z crate-attr=feature(register_tool) -Z crate-attr=register_tool(rust_gpu) -C overflow-checks=off -C debug-assertions=off -Z inline-mir=off -Z mir-enable-passes=-GVN -Z share-generics=off -C debuginfo=2 -C embed-bitcode=no --crate-type dylib -Z unstable-options -Z crate-attr=no_std -Z crate-attr=feature(asm_experimental_arch) -Z ui-testing -C llvm-args=--disassemble

query stack during panic:
end of query stack

error: the compiler unexpectedly panicked. this is a bug.

note: we would appreciate a bug report: https://github.com/rust-gpu/rust-gpu/issues/new

note: please make sure that you have updated to the latest nightly

note: please attach the file at `$SRC_DIR/rustc-ice-2026-01-19T17_56_06-137971.txt` to your bug report

note: compiler flags: -C prefer-dynamic -Z codegen-backend=/home/firestar99/workspace/rust-gpu/target/release/deps/librustc_codegen_spirv.so -Z binary-dep-depinfo -C symbol-mangling-version=v0 -Z crate-attr=feature(register_tool) -Z crate-attr=register_tool(rust_gpu) -C overflow-checks=off -C debug-assertions=off -Z inline-mir=off -Z mir-enable-passes=-GVN -Z share-generics=off -C debuginfo=2 -C embed-bitcode=no --crate-type dylib -Z unstable-options -Z crate-attr=no_std -Z crate-attr=feature(asm_experimental_arch) -Z ui-testing -C llvm-args=--disassemble

query stack during panic:
end of query stack
note: `rust-gpu` version `0.9.0`

